[package]
name = "loxone_hap"
version = "0.1.0"
authors = ["Mario Flach <m.flach@almightycouch.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11"