[package]
name = "loxone"
version = "0.1.0"
authors = ["Mario Flach <m.flach@almightycouch.com>"]
edition = "2018"

[lib]
name = "loxone"
path = "src/lib.rs"
doc = true

[dependencies]
base64 = "0.13"
byteorder = "1.3"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
http = "0.2"
pem = "0.8"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
rsa = "0.3"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_asn1 = "0.4"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11"
url = "2.1"